## Process this file with automake to produce Makefile.in

helpdir = $(prefix)/dx/help

EXTRA_DIST = $(helpfiles1) $(helpfiles2) $(helpfiles3) $(helpfiles4) $(helpfiles5)  \
	$(helpfiles6) $(helpfiles7) $(helpfiles8) $(helpfiles9) $(helpfiles10)  \
	$(helpfiles11) $(helpfiles12) $(helpfiles13) $(helpfiles14) $(helpfiles15)  \
	$(helpfiles16) $(helpfiles17) $(helpfiles18) $(helpfiles19) $(helpfiles20)  \
	$(helpfiles21) $(helpfiles22) 
helpfiles1 = \
	HelpDir HelpNotAvailable dxall1 dxall10 dxall100 dxall1000 \
	dxall1001 dxall1002 dxall1003 dxall1004 dxall1005 dxall1006 \
	dxall1007 dxall1008 dxall1009 dxall101 dxall1010 dxall1011 \
	dxall1012 dxall1013 dxall1014 dxall1015 dxall1016 dxall1017 \
	dxall1018 dxall1019 dxall102 dxall1020 dxall1021 dxall1022 \
	dxall1023 dxall1024 dxall1025 dxall1026 dxall1027 dxall1028 \
	dxall1029 dxall103 dxall1030 dxall1031 dxall1032 dxall1033 \
	dxall1034 dxall1035 dxall1036 dxall1037 dxall1038 dxall1039 \
	dxall104 dxall1040 dxall1041 dxall1042 dxall1043 dxall1044 \
	dxall1045 dxall1046 dxall1047 dxall1048 dxall1049 dxall105
helpfiles2 = \
	dxall1050 dxall1051 dxall1052 dxall1053 dxall1054 dxall1055 \
	dxall1056 dxall1057 dxall1058 dxall1059 dxall106 dxall1060 \
	dxall1061 dxall1062 dxall1063 dxall1064 dxall1065 dxall1066 \
	dxall1067 dxall1068 dxall1069 dxall107 dxall1070 dxall1071 \
	dxall1072 dxall1073 dxall1074 dxall1075 dxall1076 dxall1077 \
	dxall1078 dxall1079 dxall108 dxall1080 dxall1081 dxall1082 \
	dxall1083 dxall1084 dxall1085 dxall1086 dxall1087 dxall1088 \
	dxall1089 dxall109 dxall1090 dxall1091 dxall1092 dxall1093 \
	dxall1094 dxall1095 dxall1096 dxall1097 dxall1098 dxall1099 \
	dxall11 dxall110 dxall1100 dxall1101 dxall1102 dxall1103
helpfiles3 = \
	dxall1104 dxall1105 dxall1106 dxall1107 dxall1108 dxall1109 \
	dxall111 dxall1110 dxall1111 dxall1112 dxall1113 dxall1114 \
	dxall1115 dxall1116 dxall1117 dxall1118 dxall1119 dxall112 \
	dxall1120 dxall1121 dxall1122 dxall1123 dxall1124 dxall1125 \
	dxall1126 dxall1127 dxall1128 dxall1129 dxall113 dxall1130 \
	dxall1131 dxall1132 dxall1133 dxall1134 dxall1135 dxall1136 \
	dxall1137 dxall1138 dxall1139 dxall114 dxall1140 dxall1141 \
	dxall1142 dxall1143 dxall1144 dxall1145 dxall1146 dxall1147 \
	dxall1148 dxall1149 dxall115 dxall1150 dxall1151 dxall1152 \
	dxall1153 dxall1154 dxall1155 dxall1156 dxall1157 dxall1158
helpfiles4 = \
	dxall1159 dxall116 dxall1160 dxall1161 dxall1162 dxall1163 \
	dxall1164 dxall1165 dxall1166 dxall1167 dxall1168 dxall1169 \
	dxall117 dxall1170 dxall1171 dxall1172 dxall1173 dxall1174 \
	dxall1175 dxall1176 dxall1177 dxall1178 dxall1179 dxall118 \
	dxall1180 dxall1181 dxall1182 dxall1183 dxall1184 dxall1185 \
	dxall1186 dxall1187 dxall1188 dxall1189 dxall119 dxall1190 \
	dxall1191 dxall1192 dxall1193 dxall1194 dxall1195 dxall1196 \
	dxall1197 dxall1198 dxall1199 dxall12 dxall120 dxall1200 \
	dxall1201 dxall1202 dxall1203 dxall1204 dxall1205 dxall1206
helpfiles5 = \
	dxall1207 dxall1208 dxall1209 dxall121 dxall1210 dxall1211 \
	dxall1212 dxall1213 dxall1214 dxall1215 dxall1216 dxall1217 \
	dxall1218 dxall1219 dxall122 dxall1220 dxall1221 dxall1222 \
	dxall1223 dxall1224 dxall1225 dxall1226 dxall1227 dxall1228 \
	dxall1229 dxall123 dxall1230 dxall1231 dxall1232 dxall1233 \
	dxall1234 dxall1235 dxall1236 dxall1237 dxall1238 dxall1239 \
	dxall124 dxall1240 dxall1241 dxall1242 dxall1243 dxall1244 \
	dxall1245 dxall1246 dxall1247 dxall1248 dxall1249 dxall125 \
	dxall1250 dxall1251 dxall1252 dxall1253 dxall1254 dxall1255 \
	dxall1256 dxall1257 dxall1258 dxall1259 dxall126 dxall1260
helpfiles6 = \
	dxall1261 dxall1262 dxall1263 dxall1264 dxall1265 dxall1266 \
	dxall1267 dxall1268 dxall1269 dxall127 dxall1270 dxall1271 \
	dxall1272 dxall1273 dxall1274 dxall1275 dxall1276 dxall1277 \
	dxall1278 dxall1279 dxall128 dxall1280 dxall1281 dxall1282 \
	dxall1283 dxall1284 dxall1285 dxall1286 dxall1287 dxall1288 \
	dxall1289 dxall129 dxall1290 dxall1291 dxall1292 dxall1293 \
	dxall1294 dxall1295 dxall1296 dxall1297 dxall1298 dxall1299 \
	dxall13 dxall130 dxall1300 dxall1301 dxall1302 dxall1303 \
	dxall1304 dxall1305 dxall1306 dxall1307 dxall1308 dxall1309 \
	dxall131 dxall1310 dxall1311 dxall1312 dxall1313 dxall1314
helpfiles7 = \
	dxall1315 dxall1316 dxall1317 dxall1318 dxall1319 dxall132 \
	dxall1320 dxall1321 dxall1322 dxall1323 dxall1324 dxall1325 \
	dxall1326 dxall1327 dxall1328 dxall1329 dxall133 dxall1330 \
	dxall1331 dxall1332 dxall1333 dxall1334 dxall1335 dxall1336 \
	dxall1337 dxall1338 dxall1339 dxall134 dxall1340 dxall1341 \
	dxall1342 dxall1343 dxall1344 dxall1345 dxall1346 dxall1347 \
	dxall1348 dxall1349 dxall135 dxall1350 dxall1351 dxall1352 \
	dxall1353 dxall1354 dxall1355 dxall1356 dxall1357 dxall1358 \
	dxall1359 dxall136 dxall1360 dxall1361 dxall1362 dxall1363 \
	dxall1364 dxall1365 dxall1366 dxall1367 dxall1368 dxall1369
helpfiles8 = \
	dxall137 dxall1370 dxall1371 dxall1372 dxall1373 dxall1374 \
	dxall1375 dxall1376 dxall1377 dxall1378 dxall1379 dxall138 \
	dxall1380 dxall1381 dxall1382 dxall1383 dxall1384 dxall1385 \
	dxall1386 dxall1387 dxall1388 dxall1389 dxall139 dxall1390 \
	dxall1391 dxall1392 dxall1393 dxall1394 dxall1395 dxall1396 \
	dxall1397 dxall1398 dxall1399 dxall140 dxall1400 dxall1401 \
	dxall1402 dxall1403 dxall1404 dxall1405 dxall1406 dxall1407 \
	dxall141 dxall142 dxall143 dxall144 dxall145 dxall146 \
	dxall147 dxall148 dxall149 dxall15 dxall150 dxall151 \
	dxall152 dxall153 dxall154 dxall155 dxall156 dxall157
helpfiles9 = \
	dxall158 dxall159 dxall160 dxall161 dxall162 dxall163 \
	dxall164 dxall165 dxall166 dxall167 dxall168 dxall169 \
	dxall17 dxall170 dxall171 dxall172 dxall173 dxall174 \
	dxall175 dxall176 dxall177 dxall178 dxall179 dxall180 \
	dxall181 dxall182 dxall183 dxall184 dxall185 dxall186 \
	dxall187 dxall188 dxall189 dxall19 dxall190 dxall191 \
	dxall192 dxall193 dxall194 dxall195 dxall196 dxall197 \
	dxall198 dxall199 dxall2 dxall20 dxall200 dxall201 \
	dxall203 dxall204 dxall206 dxall207 dxall208 dxall21 \
	dxall210 dxall211 dxall213 dxall215 dxall217 dxall219
helpfiles10 = \
	dxall22 dxall220 dxall221 dxall222 dxall223 dxall225 \
	dxall227 dxall229 dxall23 dxall231 dxall233 dxall235 \
	dxall237 dxall239 dxall24 dxall241 dxall243 dxall245 \
	dxall247 dxall249 dxall25 dxall251 dxall252 dxall253 \
	dxall254 dxall255 dxall256 dxall257 dxall258 dxall259 \
	dxall26 dxall260 dxall261 dxall262 dxall263 dxall264 \
	dxall265 dxall266 dxall267 dxall268 dxall269 dxall27 \
	dxall270 dxall271 dxall272 dxall273 dxall274 dxall275 \
	dxall276 dxall278 dxall28 dxall280 dxall282 dxall283 \
	dxall284 dxall285 dxall286 dxall287 dxall288 dxall289
helpfiles11 = \
	dxall29 dxall290 dxall291 dxall292 dxall293 dxall294 \
	dxall295 dxall296 dxall297 dxall298 dxall299 dxall3 \
	dxall30 dxall300 dxall301 dxall302 dxall304 dxall305 \
	dxall306 dxall307 dxall308 dxall309 dxall31 dxall310 \
	dxall312 dxall314 dxall316 dxall317 dxall318 dxall32 \
	dxall320 dxall321 dxall322 dxall323 dxall324 dxall325 \
	dxall326 dxall327 dxall328 dxall329 dxall33 dxall330 \
	dxall331 dxall332 dxall333 dxall334 dxall335 dxall336 \
	dxall337 dxall338 dxall339 dxall34 dxall340 dxall341 \
	dxall342 dxall343 dxall344 dxall345 dxall346 dxall347
helpfiles12 = \
	dxall348 dxall349 dxall35 dxall350 dxall351 dxall352 \
	dxall353 dxall354 dxall355 dxall356 dxall357 dxall358 \
	dxall359 dxall36 dxall361 dxall363 dxall364 dxall365 \
	dxall366 dxall367 dxall368 dxall37 dxall370 dxall371 \
	dxall372 dxall373 dxall374 dxall375 dxall376 dxall377 \
	dxall378 dxall379 dxall38 dxall380 dxall381 dxall382 \
	dxall383 dxall384 dxall385 dxall386 dxall387 dxall388 \
	dxall389 dxall39 dxall390 dxall391 dxall392 dxall393 \
	dxall394 dxall395 dxall396 dxall397 dxall399 dxall4 \
	dxall40 dxall400 dxall401 dxall402 dxall403 dxall404
helpfiles13 = \
	dxall405 dxall406 dxall407 dxall408 dxall409 dxall41 \
	dxall410 dxall411 dxall413 dxall415 dxall417 dxall418 \
	dxall419 dxall42 dxall420 dxall421 dxall423 dxall425 \
	dxall427 dxall429 dxall43 dxall430 dxall431 dxall432 \
	dxall433 dxall434 dxall435 dxall436 dxall437 dxall438 \
	dxall439 dxall44 dxall440 dxall441 dxall442 dxall443 \
	dxall444 dxall445 dxall446 dxall447 dxall448 dxall449 \
	dxall45 dxall450 dxall451 dxall452 dxall453 dxall454 \
	dxall455 dxall456 dxall457 dxall458 dxall459 dxall46 \
	dxall460 dxall461 dxall462 dxall463 dxall464 dxall465
helpfiles14 = \
	dxall466 dxall467 dxall468 dxall469 dxall47 dxall470 \
	dxall471 dxall472 dxall473 dxall474 dxall475 dxall476 \
	dxall477 dxall478 dxall479 dxall48 dxall480 dxall481 \
	dxall482 dxall483 dxall484 dxall485 dxall486 dxall487 \
	dxall488 dxall489 dxall49 dxall490 dxall491 dxall492 \
	dxall493 dxall494 dxall495 dxall496 dxall497 dxall499 \
	dxall5 dxall50 dxall501 dxall503 dxall505 dxall506 \
	dxall507 dxall508 dxall509 dxall51 dxall510 dxall511 \
	dxall512 dxall513 dxall514 dxall515 dxall516 dxall517 \
	dxall518 dxall52 dxall520 dxall522 dxall523 dxall525
helpfiles15 = \
	dxall527 dxall529 dxall53 dxall530 dxall531 dxall532 \
	dxall533 dxall534 dxall535 dxall536 dxall537 dxall538 \
	dxall539 dxall54 dxall540 dxall541 dxall542 dxall543 \
	dxall544 dxall545 dxall546 dxall547 dxall548 dxall549 \
	dxall55 dxall550 dxall551 dxall552 dxall553 dxall554 \
	dxall555 dxall556 dxall557 dxall558 dxall559 dxall56 \
	dxall560 dxall561 dxall562 dxall563 dxall564 dxall565 \
	dxall566 dxall567 dxall568 dxall569 dxall57 dxall570 \
	dxall571 dxall572 dxall573 dxall575 dxall576 dxall578 \
	dxall58 dxall580 dxall582 dxall584 dxall586 dxall587
helpfiles16 = \
	dxall589 dxall59 dxall590 dxall592 dxall594 dxall596 \
	dxall597 dxall598 dxall599 dxall6 dxall60 dxall600 \
	dxall601 dxall602 dxall603 dxall604 dxall605 dxall606 \
	dxall607 dxall608 dxall609 dxall61 dxall610 dxall611 \
	dxall612 dxall613 dxall614 dxall615 dxall616 dxall617 \
	dxall618 dxall619 dxall62 dxall620 dxall621 dxall622 \
	dxall623 dxall624 dxall625 dxall626 dxall627 dxall628 \
	dxall629 dxall63 dxall630 dxall631 dxall632 dxall633 \
	dxall634 dxall635 dxall636 dxall637 dxall638 dxall639 \
	dxall64 dxall640 dxall641 dxall642 dxall643 dxall644
helpfiles17 = \
	dxall645 dxall646 dxall647 dxall648 dxall649 dxall65 \
	dxall650 dxall651 dxall652 dxall653 dxall654 dxall655 \
	dxall656 dxall657 dxall658 dxall659 dxall66 dxall660 \
	dxall661 dxall662 dxall663 dxall664 dxall665 dxall666 \
	dxall667 dxall668 dxall669 dxall67 dxall670 dxall671 \
	dxall672 dxall673 dxall674 dxall675 dxall676 dxall677 \
	dxall678 dxall679 dxall68 dxall680 dxall681 dxall682 \
	dxall683 dxall684 dxall685 dxall687 dxall689 dxall69 \
	dxall691 dxall693 dxall694 dxall695 dxall697 dxall699 \
	dxall7 dxall70 dxall701 dxall703 dxall705 dxall707
helpfiles18 = \
	dxall709 dxall71 dxall711 dxall713 dxall715 dxall717 \
	dxall719 dxall72 dxall721 dxall723 dxall725 dxall727 \
	dxall729 dxall73 dxall731 dxall733 dxall735 dxall737 \
	dxall739 dxall74 dxall741 dxall743 dxall744 dxall745 \
	dxall746 dxall747 dxall748 dxall749 dxall75 dxall750 \
	dxall751 dxall752 dxall753 dxall754 dxall755 dxall756 \
	dxall757 dxall758 dxall759 dxall76 dxall760 dxall761 \
	dxall762 dxall763 dxall764 dxall765 dxall766 dxall767 \
	dxall768 dxall769 dxall77 dxall770 dxall771 dxall772 \
	dxall773 dxall774 dxall775 dxall776 dxall777 dxall778
helpfiles19 = \
	dxall779 dxall78 dxall780 dxall781 dxall782 dxall783 \
	dxall784 dxall785 dxall786 dxall787 dxall788 dxall789 \
	dxall79 dxall790 dxall791 dxall792 dxall793 dxall794 \
	dxall795 dxall796 dxall797 dxall798 dxall799 dxall8 \
	dxall80 dxall800 dxall801 dxall802 dxall803 dxall804 \
	dxall805 dxall806 dxall807 dxall809 dxall81 dxall811 \
	dxall812 dxall813 dxall814 dxall815 dxall817 dxall818 \
	dxall819 dxall82 dxall820 dxall821 dxall822 dxall823 \
	dxall824 dxall825 dxall826 dxall827 dxall828 dxall829 \
	dxall83 dxall830 dxall831 dxall832 dxall833 dxall835
helpfiles20 = \
	dxall837 dxall839 dxall84 dxall841 dxall843 dxall844 \
	dxall845 dxall846 dxall847 dxall848 dxall849 dxall85 \
	dxall850 dxall851 dxall852 dxall853 dxall854 dxall855 \
	dxall856 dxall857 dxall858 dxall859 dxall86 dxall860 \
	dxall862 dxall864 dxall866 dxall868 dxall87 dxall870 \
	dxall871 dxall872 dxall873 dxall875 dxall876 dxall877 \
	dxall878 dxall879 dxall88 dxall880 dxall881 dxall882 \
	dxall883 dxall884 dxall885 dxall886 dxall887 dxall888 \
	dxall889 dxall89 dxall890 dxall891 dxall892 dxall893 \
	dxall894 dxall895 dxall896 dxall897 dxall898 dxall899
helpfiles21 = \
	dxall9 dxall90 dxall900 dxall901 dxall902 dxall903 \
	dxall904 dxall905 dxall906 dxall908 dxall909 dxall91 \
	dxall910 dxall911 dxall912 dxall913 dxall914 dxall915 \
	dxall916 dxall917 dxall918 dxall919 dxall92 dxall920 \
	dxall921 dxall922 dxall923 dxall924 dxall925 dxall926 \
	dxall927 dxall928 dxall929 dxall93 dxall930 dxall931 \
	dxall932 dxall933 dxall934 dxall935 dxall936 dxall937 \
	dxall938 dxall939 dxall94 dxall940 dxall941 dxall942 \
	dxall943 dxall944 dxall945 dxall946 dxall947 dxall948 \
	dxall949 dxall95 dxall950 dxall951 dxall952 dxall953
helpfiles22 = \
	dxall954 dxall955 dxall956 dxall957 dxall958 dxall959 \
	dxall96 dxall960 dxall961 dxall962 dxall963 dxall964 \
	dxall965 dxall966 dxall967 dxall968 dxall969 dxall97 \
	dxall970 dxall971 dxall972 dxall973 dxall974 dxall975 \
	dxall976 dxall977 dxall978 dxall979 dxall98 dxall980 \
	dxall981 dxall982 dxall983 dxall984 dxall985 dxall986 \
	dxall987 dxall988 dxall989 dxall99 dxall990 dxall991 \
	dxall992 dxall993 dxall994 dxall995 dxall997 dxall998 \
	dxall999 hlpalhtl hlpall spots 

help_DATA = $(EXTRA_DIST)


install-data-hook:
	@-sh -c '( cd $(DESTDIR)$(helpdir) && $(LN_S) hlpalhtl mbidx ; \
		 $(LN_S) hlpalhtl quikidx ; \
		 $(LN_S) hlpalhtl svsmstrh ; \
		 $(LN_S) hlpalhtl ugidx ; \
		 $(LN_S) hlpalhtl usrefidx ; \
		 $(LN_S) HelpDir GarHelpDir ; \
		 $(LN_S) HelpDir MBHelpDir ; \
		 echo "cd $(DESTDIR)$(helpdir)" ; \
		 echo "$(LN_S) hlpalhtl mbidx" ; \
		 echo "$(LN_S) hlpalhtl quikidx" ; \
		 echo "$(LN_S) hlpalhtl svsmstrh" ; \
		 echo "$(LN_S) hlpalhtl ugidx" ; \
		 echo "$(LN_S) hlpalhtl usrefidx" ; \
		 echo "$(LN_S) HelpDir GarHelpDir" ; \
		 echo "$(LN_S) HelpDir MBHelpDir" ) \
	'
