## Process this file with automake to produce Makefile.in

dxincdir = $(prefix)/dx/include/dx
 
dxinc_HEADERS = \
	UserInteractors.h advanced.h arch.h array.h arrayhandles.h \
	basic.h cache.h camera.h clipped.h component.h dx.h error.h \
	extract.h field.h geometry.h group.h grow.h hash.h helper.h image.h \
	import.h invalid.h lexical.h light.h memory.h modflags.h object.h partition.h \
	pending.h pick.h private.h rel_1_bc.h render.h resampling.h screen.h \
	seglist.h string.h task.h timing.h version.h xform.h
