

INCLUDES = -I${srcdir}/../base -I${top_srcdir}/include -I${srcdir}/../dxuilib -D@ARCH@

dxbindir = $(prefix)/dx/bin_@ARCH@
dxbin_PROGRAMS = dxui


HDRS1 = \
	ColormapDefinition.h \
	ColormapNode.h \
	ComputeDefinition.h \
	ComputeNode.h \
	DXLInputDefinition.h \
	DXLInputNode.h \
	DXLOutputDefinition.h \
	DXLOutputNode.h \
	DeleteNodeCommand.h \
	DialInteractor.h \
	DisplayDefinition.h \
	DisplayNode.h \
	DrivenDefinition.h \
	DrivenNode.h \
	EchoDefinition.h \
	EchoNode.h \
	FileSelectorDefinition.h \
	FileSelectorInteractor.h \
	FileSelectorNode.h 

HDRS2 = \
	GlobalLocalDefinition.h \
	GlobalLocalNode.h \
	ImageDefinition.h \
	ImageNode.h \
	Interactor.h \
	InteractorDefinition.h \
	InteractorNode.h \
	MacroDefinition.h \
	MacroNode.h \
	MacroParameterDefinition.h \
	MacroParameterNode.h \
	ModuleMessagingNode.h \
	Node.h \
	NodeDefinition.h \
	NodeList.h \
	NondrivenInteractorNode.h \
	ParameterDefinition.h \
	PickDefinition.h \
	PickNode.h  \
	PrintDefinition.h \
	PrintNode.h \
	ProbeDefinition.h \
	ProbeNode.h \
	ReceiverDefinition.h \
	ReceiverNode.h \
	ResetDefinition.h \
	ResetNode.h \
	ScalarDefinition.h 

HDRS3 = \
	ScalarInteractor.h \
	ScalarListDefinition.h \
	ScalarListInteractor.h \
	ScalarListNode.h \
	ScalarNode.h \
	SelectionDefinition.h \
	SelectionNode.h \
	SelectorDefinition.h \
	SelectorInteractor.h \
	SelectorListDefinition.h \
	SelectorListInteractor.h \
	SelectorListNode.h \
	SelectorListToggleInteractor.h \
	SelectorNode.h \
	SelectorPulldownInteractor.h \
	SelectorRadioInteractor.h \
	SequencerDefinition.h \
	SequencerNode.h \
	ShadowedOutputDefinition.h \
	ShadowedOutputNode.h \
	SliderInteractor.h \
	StepperInteractor.h \
	StreaklineDefinition.h \
	StreaklineNode.h \
	ToggleDefinition.h \
	ToggleInteractor.h \
	ToggleNode.h \
	ToggleToggleInteractor.h \
	TransmitterDefinition.h \
	TransmitterNode.h \
	UniqueNameNode.h \
	ValueDefinition.h \
	ValueInteractor.h \
	ValueListDefinition.h \
	ValueListInteractor.h \
	ValueListNode.h \
	ValueNode.h \
	VectorDefinition.h \
	VectorListDefinition.h 

HDRS4 = \
	AccessNetworkPanelsCommand.h \
	ColormapEditCommand.h \
	ColormapFileCommand.h \
	ConfirmedExitCommand.h \
	ConfirmedQuitCommand.h \
	DisconnectFromServerCommand.h \
	ExecCommandDialog.h \
	ImageApproxCommand.h \
	ImageConstraintCommand.h \
	ImageFormatCommand.h \
	ImageHardwareCommand.h \
	ImageLookCommand.h \
	ImagePerspectiveCommand.h \
	ImageRedoCommand.h \
	ImageResetCommand.h \
	ImageSetModeCommand.h \
	ImageSetViewCommand.h \
	ImageSoftwareCommand.h \
	ImageUndoCommand.h \
	NewCommand.h \
	NoUndoAnchorCommand.h \
	NoUndoDXAppCommand.h \
	NoUndoDXWindowCommand.h \
	NoUndoEditorCommand.h \
	NoUndoImageCommand.h \
	NoUndoJavaNetCommand.h \
	NoUndoNetworkCommand.h \
	NoUndoPanelCommand.h \
	OpenCommand.h \
	OpenFileCommand.h \
	SaveMacroCommand.h \
	ToolPanelCommand.h \
	ViewControlWhichCameraCommand.h

noinst_HEADERS = $(HDRS1) $(HDRS2) $(HDRS3) $(HDRS4)

SRCS1 = \
	ColormapDefinition.C \
	ColormapNode.C \
	ComputeDefinition.C \
	ComputeNode.C \
	DXLInputDefinition.C \
	DXLInputNode.C \
	DXLOutputDefinition.C \
	DXLOutputNode.C \
	DeleteNodeCommand.C \
	DialInteractor.C \
	DisplayDefinition.C \
	DisplayNode.C \
	DrivenDefinition.C \
	DrivenNode.C \
	EchoDefinition.C \
	EchoNode.C \
	FileSelectorDefinition.C \
	FileSelectorInteractor.C \
	FileSelectorNode.C \
	GlobalLocalDefinition.C \
	GlobalLocalNode.C \
	ImageDefinition.C \
	ImageNode.C \
	Interactor.C \
	InteractorDefinition.C \
	InteractorNode.C \
	MacroDefinition.C \
	MacroNode.C \
	MacroParameterDefinition.C \
	MacroParameterNode.C \
	ModuleMessagingNode.C \
	Node.C \
	NodeDefinition.C \
	NodeList.C \
	NondrivenInteractorNode.C \
	ParameterDefinition.C \
	PickDefinition.C \
	PickNode.C \
	PrintDefinition.C \
	PrintNode.C \
	ProbeDefinition.C \
	ProbeNode.C \
	ReceiverDefinition.C \
	ReceiverNode.C 

SRCS2 = \
	ResetDefinition.C \
	ResetNode.C \
	ScalarDefinition.C \
	ScalarInteractor.C \
	ScalarListDefinition.C \
	ScalarListInteractor.C \
	ScalarListNode.C \
	ScalarNode.C \
	SelectionNode.C \
	SelectorDefinition.C \
	SelectorInteractor.C \
	SelectorListDefinition.C \
	SelectorListInteractor.C \
	SelectorListNode.C \
	SelectorListToggleInteractor.C \
	SelectorNode.C \
	SelectorRadioInteractor.C \
	SequencerDefinition.C \
	SequencerNode.C \
	ShadowedOutputNode.C \
	SliderInteractor.C \
	StepperInteractor.C \
	StreaklineDefinition.C \
	StreaklineNode.C \
	ToggleDefinition.C \
	ToggleInteractor.C \
	ToggleNode.C \
	ToggleToggleInteractor.C \
	TransmitterDefinition.C \
	TransmitterNode.C \
	UniqueNameNode.C \
	ValueDefinition.C \
	ValueInteractor.C \
	ValueListDefinition.C \
	ValueListInteractor.C \
	ValueListNode.C \
	ValueNode.C \
	VectorDefinition.C \
	VectorListDefinition.C  

SRCS3 = \
	AccessNetworkPanelsCommand.C \
	ColormapEditCommand.C \
	ColormapFileCommand.C \
	ConfirmedExitCommand.C \
	ConfirmedQuitCommand.C \
	DisconnectFromServerCommand.C \
	ExecCommandDialog.C \
	ImageApproxCommand.C \
	ImageConstraintCommand.C \
	ImageFormatCommand.C \
	ImageHardwareCommand.C \
	ImageLookCommand.C \
	ImagePerspectiveCommand.C \
	ImageRedoCommand.C \
	ImageResetCommand.C \
	ImageSetModeCommand.C \
	ImageSetViewCommand.C \
	ImageSoftwareCommand.C \
	ImageUndoCommand.C \
	NewCommand.C \
	NoUndoAnchorCommand.C \
	NoUndoDXAppCommand.C \
	NoUndoDXWindowCommand.C \
	NoUndoEditorCommand.C \
	NoUndoImageCommand.C \
	NoUndoJavaNetCommand.C \
	NoUndoNetworkCommand.C \
	NoUndoPanelCommand.C \
	OpenCommand.C \
	SaveMacroCommand.C \
	ToolPanelCommand.C \
	ViewControlWhichCameraCommand.C \
	\
	Main.C

dxui_SOURCES =	$(SRCS1) $(SRCS2) $(SRCS3)

dxui_LDADD = \
	../dxuilib/libDXUI.a  \
	../base/libBASE.a  \
	../widgets/libWIDGETS.a @DXUI_ALDFLAGS@
	


